# lcpt_workflow_automation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
config/: checklist_mapping.yaml  company_prefix_mapping.yaml  haul_ocr_fields.yaml
docs/: aws-deployment-guide.md  sharepoint-review-queue-setup.md
infra/: main.tf  outputs.tf  terraform.tfvars.example  test-event.json  trigger.tf  variables.tf  versions.tf
samples/: create_sample_pdf.py
samples/ocr/: both_routes_checked.json  company_mismatch.json  missing_wr_number.json  neither_route_checked.json  ocr_failed.json  valid_cover_sheet_completed.json
scripts/: make_e2e_test_scan.py  watch_s3_for_scans.py
src/lcpt_scan_automation/application/: audit_note_builder.py  checklist_mapper.py  handle_ocr_callback.py  ocr_result_parser.py  process_scan.py
src/lcpt_scan_automation/config/: settings.py
src/lcpt_scan_automation/domain/: enums.py  errors.py  models.py  validation.py
src/lcpt_scan_automation/entrypoints/: container.py  lambda_handler.py  local_cli.py  webhook_api.py
src/lcpt_scan_automation/infrastructure/cp_suite/: auth.py  cp_suite_http_client.py  mock_cp_suite_client.py
src/lcpt_scan_automation/ports/: cp_suite_client.py  idempotency_store.py  ocr_client.py  pdf_processor.py  review_queue.py  storage.py
tests/: conftest.py
tests/unit/: test_audit_note_builder.py  test_checklist_mapper.py  test_lambda_handler.py  test_process_scan.py  test_s3.py  test_sharepoint_review_queue.py  test_validation.py  test_watch_s3_for_scans.py
(+8 files in other folders)
