[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcpt-scan-automation"
version = "0.1.0"
description = "LCPT Scanning Workflow Automation - AIP-388"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "pypdf>=4.2",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
aws = ["boto3>=1.34"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-cov>=5.0",
    "boto3>=1.34",
]

[project.scripts]
lcpt-scan = "lcpt_scan_automation.entrypoints.local_cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
